# Performance-analysis-of-predictive-classification-of-human-instructions-using-NLP-models

./: .gitignore  README.md  code.ipynb  requirement.txt
data/: test_data.csv
mini_proj_1/: .gitmodules  README.md
mini_proj_1/mysite/content/: _index.md
miniproj_2/: README.md
miniproj_2/new-lambda-project/: Cargo.toml
miniproj_2/new-lambda-project/src/: main.rs
yy341_indiv_proj1/: .gitmodules  README.md  config.toml  netlify.toml
yy341_indiv_proj1/content/about/: _index.md
yy341_indiv_proj1/content/education/: _index.md  template.md
yy341_indiv_proj1/content/projects/: Project2.md  _index.md  project1.md  project3.md  project4.md
yy341_indiv_proj1/templates/: education.html
yy341_indiv_proj2/: .gitlab-ci.yml  Dockerfile  README.md
yy341_indiv_proj2/src/: main.rs
yy341_indiv_proj4/: .gitlab-ci.yml  README.md
yy341_indiv_proj4/rm_num/: Cargo.toml
yy341_indiv_proj4/rm_punc/: Cargo.toml
yy341_mini_proj10/: Cargo.toml  Dockerfile  README.md
yy341_mini_proj10/src/: main.rs
yy341_mini_proj3/: README.md
yy341_mini_proj3/lib/: week3-mini-project-stack.ts
yy341_mini_proj3/test/: week3-mini-project.test.ts
yy341_mini_proj4/: Cargo.toml  Dockerfile  README.md
yy341_mini_proj4/src/: main.rs
yy341_mini_proj5/: Cargo.toml  README.md
yy341_mini_proj5/src/: main.rs
yy341_mini_proj6/: Cargo.toml  README.md
yy341_mini_proj6/src/: main.rs
yy341_mini_proj7/: Cargo.toml  README.md
yy341_mini_proj7/src/: main.rs
yy341_mini_proj8/: Cargo.toml  README.md  test1.csv
yy341_mini_proj8/src/: main.rs
yy341_mini_proj9/: README.md
(+3 files in other folders)
