[package]
name = "week2-mini-project"
version = "0.1.0"
edition = "2021"


[dependencies]
serde_json = "1"
lambda_http = "0.8.3"
lambda_runtime = "0.9.1"
serde = "1.0.136"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

