[package]
name = "cmdtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
csv = "1.1.6"
clap = "2.27.1"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
